--- a/ahn/src/main/resources/templates/pda/includePda/sidebarPda.html
+++ b/ahn/src/main/resources/templates/pda/includePda/sidebarPda.html
@@ -15,7 +15,7 @@
       <li class="nav-item">
         <a class="nav-link collapsed" th:href="@{/LnboundPad}">
           <i class="bi bi-box-arrow-right"></i>
-          <span>입고 관리</span>
+          <span>입출고 관리</span>
         </a>
       </li><!-- End Login Page Nav -->
       <li class="nav-item" >
