--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -310,38 +310,25 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0);" class="menu-toggle">
+                        <a  th:href="@{/OrderXdmList}" >
                             <i class="material-icons"></i>
-                            <span>주문관리</span>
+                            <span>주문목록</span>
                         </a>
-                        <ul class="ml-menu">
-                            <li>
-                                <a class="" th:href="@{/OrderXdmList}">주문목록</a>
-                            </li>
-                           
-                        </ul> 
+                        
                     </li>
                     <li>
-                        <a href="javascript:void(0);" class="menu-toggle">
+                        <a th:href="@{/productXdmList}">
                             <i class="material-icons"></i>
-                            <span>상품관리</span>
+                            <span>상품재고</span>
                         </a>
-                        <ul class="ml-menu">
-                            <li>
-                                <a th:href="@{/productXdmList}">상품재고</a>
-                            </li>
-                        </ul>
+                        
                     </li>
                     <li>
-                        <a href="javascript:void(0);" class="menu-toggle">
+                        <a th:href="@{/FactoryOrderXdmList}" >
                             <i class="material-icons"></i>
-                            <span>발주관리</span>
+                            <span>발주내역</span>
                         </a>
-                        <ul class="ml-menu">
-                        	<li>
-                                <a th:href="@{/FactoryOrderXdmList}">발주내역</a>
-                            </li>
-                        </ul> 
+                       
                     </li>
 <!--                     <li> -->
 <!--                         <a href="javascript:void(0);" class="menu-toggle"> -->
