--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -310,7 +310,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0);" class="menu-toggle">
+                        <a th:href="@{/OrderXdmList}" class="menu-toggle">
                             <i class="material-icons"></i>
                             <span>주문관리</span>
                         </a>
