--- a/ahn/src/main/resources/templates/xdm/code/codeXdmList.html
+++ b/ahn/src/main/resources/templates/xdm/code/codeXdmList.html
@@ -167,9 +167,9 @@
                                                 <label class="form-check-label" th:for="'chk_' + ${list.cdSeq}"></label>
                                             </th>
 
-                                            <td th:text="${vo.totalRows - ((vo.thisPage - 1) * vo.rowNumToShow +listStat.index )}"></td>
+                                           
 
-                                            <td th:text="${vo.totalRows - ((vo.thisPage - 1) * vo.rowNumToShow + listStat.index)}"></td>
+                                            <td th:text="${(vo.thisPage - 1) * vo.rowNumToShow + listStat.index + 1}"></td>
 
                                             
                                             <td th:text="${list.cdgSeq}"></td>
@@ -193,7 +193,7 @@
 									
 									<li th:if="${vo.startPage gt vo.pageNumToShow}" class="page-item">
 										<a class="page-link" href="javascript:goList(${vo.startPage - 1})" th:attr="onclick=|goList('${vo.startPage - 1}')|">
-											<i>이전</i>
+											<i><<</i>
 										</a>
 									</li>
 									<li th:each="num: ${#numbers.sequence(vo.startPage, vo.endPage)}" th:classappend="${num eq vo.thisPage} ? active : ''" class="page-item">
@@ -201,7 +201,7 @@
 									</li>
 									<li th:if="${vo.endPage ne vo.totalPages}" class="page-item" >
 										<a class="page-link" th:attr="onclick=|goList('${vo.endPage + 1}')|">
-											<i>다음</i>
+											<i>>></i>
 										</a>
 									</li>
 								  
