--- a/ahn/src/main/resources/templates/pda/DeliveryPda.html
+++ b/ahn/src/main/resources/templates/pda/DeliveryPda.html
@@ -39,9 +39,11 @@
   
 	
 
-   <button type="button" id="buttonDeliver" style="margin-top:10px; width:100%; padding:10px; font-size:14px; background-color:#4CAF50; color:white; border:none; border-radius:5px;">
-    배송하기
-  </button>
+<!-- 입고하기 버튼 (링크) -->
+<a th:href="@{/DeliveryDetailsPda}" 
+   style="margin-top:10px; width:100%; padding:10px; font-size:14px; background-color:#4CAF50; color:white; border:none; border-radius:5px; display:block; text-align:center; text-decoration:none;">
+  입고 하기
+</a>
   <br>   <br>   <br>  
 
 
@@ -56,7 +58,7 @@
           <th style="padding:8px; text-align:left;">배송번호</th>
           <th style="padding:8px; text-align:left;">상품명</th>
           <th style="padding:8px; text-align:right;">수량</th>
-          <th style="padding:8px; text-align:right;">처리상태</th>
+          <th style="padding:8px; text-align:right;">배송상태</th>
         </tr>
       </thead>
       <tbody>
@@ -71,7 +73,7 @@
           <td style="padding:10px; text-align:right;" th:text="${list.shOrderCount}">28</td>
           
           
-           <td style="padding:10px; text-align:right;" th:text="${@codeService.selectOneCachedCode(list.deliveryStatus)}">처리상태</td>
+           <td style="padding:10px; text-align:right;" th:text="${@codeService.selectOneCachedCode(list.deliveryStatus)}">배송상태</td>
         </tr>
         
         
@@ -97,7 +99,7 @@
 
   <div th:replace="~{pda/includePda/scriptPda :: scriptPda}"></div>
 
-  <script type="text/javascript">
+<!--   <script type="text/javascript">
   	
   	
   	
@@ -107,7 +109,10 @@
 		form.submit();
   	}
 
-  </script>  
+  </script>  --> 
+  
+  
+  
 </body>
 
 </html>
