--- a/ahn/src/main/resources/templates/pda/LnboundPad.html
+++ b/ahn/src/main/resources/templates/pda/LnboundPad.html
@@ -32,8 +32,8 @@
   
 
   <!-- 브랜드 선택 및 검색 -->
-<form method="get" action="/yourSearchUrl" style="padding:10px;">
-  <label for="brand" style="display:block; font-size:14px; margin-bottom:5px;"></label>
+<!-- <form method="get" action="/yourSearchUrl" style="padding:10px;">
+  <label for="brand" style="display:block; font-size:14px; margin-bottom:5px;"></label> -->
   
   <!-- 셀렉트 박스 -->
 <!--   <select id="brand" name="brand" style="width:100%; padding:10px; font-size:14px; border:1px solid #ccc; border-radius:5px;">
