--- a/ahn/src/main/resources/templates/xdm/orderlist/OrderXdmView.html
+++ b/ahn/src/main/resources/templates/xdm/orderlist/OrderXdmView.html
@@ -110,8 +110,8 @@
                                             <td  th:text="${@codeService.selectOneCachedCode(list.shTypeCd)}"></td>
                                             <td th:text="${list.shName}"></td>
                                             <td th:text="${@codeService.selectOneCachedCode(list.shSizeCd)}"></td>
-                                            <td th:text="${list.shOrderCount}"></td>
-                                            <td th:text="${list.shCount}"></td>
+                                            <td id="shOrderCount" th:text="${list.shOrderCount}"></td>
+                                            <td id="shCount" th:text="${list.shCount}"></td>
                                             <td th:text="${list.sumPrice}+원"></td>
                                         </tr>
 <!--                                     <tr class="hover-artions-trigger btn-reveal-trigger position-static">    	 -->
@@ -225,7 +225,18 @@
   let btnDelivery = document.getElementById("btnDelivery");
   if (btnDelivery) {
     btnDelivery.addEventListener("click", function () {
-     document.getElementById("formList").action="/deliveryRequest";
+    	//shCount와 shOrderCount의 값을 숫자로 집어넣음
+    	  let shOrderCountValue = Number(document.getElementById("shOrderCount").innerText);
+    	  let shCountValue = Number(document.getElementById("shCount").innerText);
+    	if(shCountValue < shOrderCountValue){
+    		alert("상품재고가 부족합니다.");
+    		return false
+    	}else{
+	     document.getElementById("formList").action="/deliveryRequest";
+    	
+    	}
+    	 
+    
      
      
     });
