재고없으면 안넘어가기

--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -315,7 +315,7 @@
 
                         <a  th:href="@{/OrderXdmList}" >
                             <i class="material-icons"></i>
-                            <span>주문목록</span>
+                            <span>주문관리</span>
                         </a>
                         
                     </li>
@@ -326,6 +326,7 @@
                         </a>
                         
                     </li>
+<!--                     <li> -->
                     <li>
                         <a th:href="@{/FactoryOrderXdmList}" >
                             <i class="material-icons"></i>
@@ -333,7 +334,13 @@
                         </a>
                        
                     </li>
-<!--                     <li> -->
+                    <li>
+                        <a th:href="@{/ReceivingXdmList}" >
+                            <i class="material-icons"></i>
+                            <span>배송관리</span>
+                        </a>
+                       
+                    </li>
 <!--                         <a href="javascript:void(0);" class="menu-toggle"> -->
 <!--                             <i class="material-icons"></i> -->
 <!--                             <span>배송관리</span> -->
