--- a/ahn/src/main/resources/templates/xdm/orderlist/OrderXdmList.html
+++ b/ahn/src/main/resources/templates/xdm/orderlist/OrderXdmList.html
@@ -11,7 +11,7 @@
         <div class="container-fluid">
             
             <div class="block-header">
-                <h2>주문내역 목록</h2>
+                <h2>주문관리</h2>
             </div>
 
             <!-- Input -->
