--- a/ahn/src/main/resources/templates/xdm/receiving/ReceivingXdmList.html
+++ b/ahn/src/main/resources/templates/xdm/receiving/ReceivingXdmList.html
@@ -211,7 +211,7 @@
 												<label class="form-check-label" th:for="'chk_' + ${list.orderSeq}"></label>
 
 											</th> 
-                                             <td><a th:href="@{/OrderXdmView(orderSeq=${list.orderSeq})}" th:text="${list.orderSeq}"></a></td>
+                                             <td th:text="${list.orderSeq}"></td>
                                             <td  th:text="${list.memId}"></td>
                                             <td th:text="${list.memName}"></td>
                                             <td th:text="${list.memAddress}"></td>
@@ -224,27 +224,27 @@
                                     </tbody>
                                 </table>
                                 <!-- 페이지 네이션 -->
-                                <div style="text-align: center;">
+                                 <div style="text-align: center;">
 								  <ul class="pagination" >
 								  	  
 									
 									<li th:if="${vo.startPage gt vo.pageNumToShow}" class="page-item">
 										<a class="page-link" href="javascript:goList(${vo.startPage - 1})" th:attr="onclick=|goList('${vo.startPage - 1}')|">
-											<i>이전</i>
+											<i><<</i>
 										</a>
 									</li>
 									<li th:each="num: ${#numbers.sequence(vo.startPage, vo.endPage)}" th:classappend="${num eq vo.thisPage} ? active : ''" class="page-item">
-										<a class="page-link" th:attr="onclick=|goList('${num}')|" th:text="${num}">${i.index}</a>
+										<a class="page-link" th:attr="onclick=|goList('${num}')|" th:text="${num}"><!-- ${i.index} --></a>
 									</li>
 									<li th:if="${vo.endPage ne vo.totalPages}" class="page-item" >
 										<a class="page-link" th:attr="onclick=|goList('${vo.endPage + 1}')|">
-											<i>다음</i>
+											<i>>></i>
 										</a>
 									</li>
 								  
 								  </ul>
 								    
-								</div> 
+								</div>
                               
                                 
                                 <br>
@@ -375,27 +375,27 @@
     </script> 
     <script type="text/javascript">
          document.getElementById("btnReset").onclick = function () {
-   		  window.location.href = "/OrderXdmList";
+   		  window.location.href = "/ReceivingXdmList";
    		};
    		/* 검색하기 */
    		document.getElementById("btnSearch").onclick = function () {
    		    let shValue = document.getElementById("shValue"); // 검색어 
 
    		    // 데이터 값이 있을 경우 폼 제출
-   		    form.action = "/OrderXdmList";
+   		    form.action = "/ReceivingXdmList";
    		    form.submit();
    		};
 
    		document.getElementById("changeRowNum").onchange = function () {
    		    document.getElementById("rowNumToShow").value = document.getElementById("changeRowNum").value;
-   		    form.action = "/OrderXdmList";
+   		    form.action = "/ReceivingXdmList";
    		    form.submit();
    		}
 
    		let seq = document.querySelector("input[name=cdSeq]");  
 
    		document.getElementById("btnForm").onclick = function () {
-   		   location.href="/OrderXdmForm";
+   		   location.href="/ReceivingXdmList";
    		}
 
 //    		goForm = function (keyValue) {
