--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -305,7 +305,7 @@
             <div class="menu">
                 <ul class="list">
                      <li>
-                        <a href="#" >
+                        <a href="/xdm/index/index" >
                             <span>home</span>
                         </a>
                     </li>
