로그인 했을떄 index 화면으로

--- a/ahn/src/main/resources/templates/xdm/signinadmin/SigninAdimn.html
+++ b/ahn/src/main/resources/templates/xdm/signinadmin/SigninAdimn.html
@@ -201,7 +201,7 @@
 						
 						 if (response.rt == "success") {
 				            	
-				                window.location.href = "/codeGroup/codeGroupXdmList"; // 성공시 코드그룹 가기
+				                window.location.href = "/xdm/index/index"; // 성공시 index 가기
 					
 						 } else if (response.rt != "success"){
 							 
