--- a/ahn/src/main/resources/templates/xdm/receiving/ReceivingXdmList.html
+++ b/ahn/src/main/resources/templates/xdm/receiving/ReceivingXdmList.html
@@ -278,8 +278,8 @@
       </div>
       <div class="modal-footer">
         <button type="button" id="btnModalUelete" class="btn btn-danger">확인</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
-
+       <!--  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+ -->
       </div>
     </div>
   </div>
