--- a/ahn/src/main/resources/templates/pda/DeliveryDetailsPda.html
+++ b/ahn/src/main/resources/templates/pda/DeliveryDetailsPda.html
@@ -120,7 +120,7 @@
   </button> -->
   <button type="button" id="btnDelivery"
   style="margin-top:10px; width:100%; padding:10px; font-size:14px; background-color:#4CAF50; color:white; border:none; border-radius:5px;">
-  배송하기
+  배송완료
 </button>
 </div>
 
