--- a/ahn/src/main/resources/templates/pda/DeliveryPda.html
+++ b/ahn/src/main/resources/templates/pda/DeliveryPda.html
@@ -17,7 +17,7 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>배송상황</h1>
+      <h1>배송관리</h1>
     <!-- 
       <nav>
         <ol class="breadcrumb">
