--- a/ahn/src/main/resources/templates/pda/LnboundPad.html
+++ b/ahn/src/main/resources/templates/pda/LnboundPad.html
@@ -16,7 +16,7 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>입출고관리</h1>
+      <h1>발주관리</h1>
     <!-- 
       <nav>
         <ol class="breadcrumb">
