--- a/ahn/src/main/resources/templates/pda/LnboundPadDetailsPad.html
+++ b/ahn/src/main/resources/templates/pda/LnboundPadDetailsPad.html
@@ -122,7 +122,7 @@
   <button type="button" id="btnOrdering"  
   
   style="margin-top:10px; width:100%; padding:10px; font-size:14px; background-color:#4CAF50; color:white; border:none; border-radius:5px;">
-  입고하기
+  입고완료
 </button>
 </div>
 
